groove/tags/release-5_0_1/src/groove/algebra/syntax/ExprParser.java
// $ANTLR 3.4 D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g 2014-06-12 08:10:01

package groove.algebra.syntax;
import groove.grammar.model.FormatErrorSet;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ExprParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AMP", "ASSIGN", "ASTERISK", "BAR", "BECOMES", "BOOL", "BSLASH", "CALL", "COLON", "COMMA", "CONST", "DOLLAR", "DONT_CARE", "DOT", "EQ", "EscapeSequence", "FALSE", "FIELD", "GE", "GT", "ID", "INT", "LCURLY", "LE", "LPAR", "LT", "MINUS", "NAT_LIT", "NEQ", "NOT", "Naturalumber", "NonIntegerNumber", "OPER", "PAR", "PERCENT", "PLUS", "QUOTE", "RCURLY", "REAL", "REAL_LIT", "RPAR", "SEMI", "SHARP", "SLASH", "STRING", "STRING_LIT", "TRUE", "WS"
    };

    public static final int EOF=-1;
    public static final int AMP=4;
    public static final int ASSIGN=5;
    public static final int ASTERISK=6;
    public static final int BAR=7;
    public static final int BECOMES=8;
    public static final int BOOL=9;
    public static final int BSLASH=10;
    public static final int CALL=11;
    public static final int COLON=12;
    public static final int COMMA=13;
    public static final int CONST=14;
    public static final int DOLLAR=15;
    public static final int DONT_CARE=16;
    public static final int DOT=17;
    public static final int EQ=18;
    public static final int EscapeSequence=19;
    public static final int FALSE=20;
    public static final int FIELD=21;
    public static final int GE=22;
    public static final int GT=23;
    public static final int ID=24;
    public static final int INT=25;
    public static final int LCURLY=26;
    public static final int LE=27;
    public static final int LPAR=28;
    public static final int LT=29;
    public static final int MINUS=30;
    public static final int NAT_LIT=31;
    public static final int NEQ=32;
    public static final int NOT=33;
    public static final int Naturalumber=34;
    public static final int NonIntegerNumber=35;
    public static final int OPER=36;
    public static final int PAR=37;
    public static final int PERCENT=38;
    public static final int PLUS=39;
    public static final int QUOTE=40;
    public static final int RCURLY=41;
    public static final int REAL=42;
    public static final int REAL_LIT=43;
    public static final int RPAR=44;
    public static final int SEMI=45;
    public static final int SHARP=46;
    public static final int SLASH=47;
    public static final int STRING=48;
    public static final int STRING_LIT=49;
    public static final int TRUE=50;
    public static final int WS=51;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ExprParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ExprParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ExprParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g"; }


        private FormatErrorSet errors = new FormatErrorSet();
        
        public void displayRecognitionError(String[] tokenNames,
                RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            this.errors.add(hdr + " " + msg, e.line, e.charPositionInLine);
        }

        public FormatErrorSet getErrors() {
            return this.errors;
        }


    public static class assignment_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "assignment"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:45:1: assignment : ID ASSIGN ^ expression ;
    public final ExprParser.assignment_return assignment() throws RecognitionException {
        ExprParser.assignment_return retval = new ExprParser.assignment_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token ID1=null;
        Token ASSIGN2=null;
        ExprParser.expression_return expression3 =null;


        ExprTree ID1_tree=null;
        ExprTree ASSIGN2_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:46:3: ( ID ASSIGN ^ expression )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:46:5: ID ASSIGN ^ expression
            {
            root_0 = (ExprTree)adaptor.nil();


            ID1=(Token)match(input,ID,FOLLOW_ID_in_assignment120); 
            ID1_tree = 
            (ExprTree)adaptor.create(ID1)
            ;
            adaptor.addChild(root_0, ID1_tree);


            ASSIGN2=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_assignment122); 
            ASSIGN2_tree = 
            (ExprTree)adaptor.create(ASSIGN2)
            ;
            root_0 = (ExprTree)adaptor.becomeRoot(ASSIGN2_tree, root_0);


            pushFollow(FOLLOW_expression_in_assignment125);
            expression3=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression3.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "assignment"


    public static class test_expression_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "test_expression"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:50:1: test_expression : ( ID op= ASSIGN expression -> ^( EQ[$op,\"==\"] ^( FIELD ID ) expression ) | expression );
    public final ExprParser.test_expression_return test_expression() throws RecognitionException {
        ExprParser.test_expression_return retval = new ExprParser.test_expression_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token op=null;
        Token ID4=null;
        ExprParser.expression_return expression5 =null;

        ExprParser.expression_return expression6 =null;


        ExprTree op_tree=null;
        ExprTree ID4_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:51:3: ( ID op= ASSIGN expression -> ^( EQ[$op,\"==\"] ^( FIELD ID ) expression ) | expression )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==ID) ) {
                int LA1_1 = input.LA(2);

                if ( (LA1_1==ASSIGN) ) {
                    alt1=1;
                }
                else if ( (LA1_1==EOF||LA1_1==AMP||(LA1_1 >= ASTERISK && LA1_1 <= BAR)||LA1_1==COLON||(LA1_1 >= DOT && LA1_1 <= EQ)||(LA1_1 >= GE && LA1_1 <= GT)||(LA1_1 >= LE && LA1_1 <= MINUS)||LA1_1==NEQ||(LA1_1 >= PERCENT && LA1_1 <= PLUS)||LA1_1==SLASH) ) {
                    alt1=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 1, input);

                    throw nvae;

                }
            }
            else if ( (LA1_0==FALSE||LA1_0==LPAR||(LA1_0 >= MINUS && LA1_0 <= NAT_LIT)||LA1_0==NOT||LA1_0==REAL_LIT||(LA1_0 >= STRING_LIT && LA1_0 <= TRUE)) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:53:5: ID op= ASSIGN expression
                    {
                    ID4=(Token)match(input,ID,FOLLOW_ID_in_test_expression150);  
                    stream_ID.add(ID4);


                    op=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_test_expression154);  
                    stream_ASSIGN.add(op);


                    pushFollow(FOLLOW_expression_in_test_expression156);
                    expression5=expression();

                    state._fsp--;

                    stream_expression.add(expression5.getTree());

                    // AST REWRITE
                    // elements: expression, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (ExprTree)adaptor.nil();
                    // 53:29: -> ^( EQ[$op,\"==\"] ^( FIELD ID ) expression )
                    {
                        // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:53:32: ^( EQ[$op,\"==\"] ^( FIELD ID ) expression )
                        {
                        ExprTree root_1 = (ExprTree)adaptor.nil();
                        root_1 = (ExprTree)adaptor.becomeRoot(
                        (ExprTree)adaptor.create(EQ, op, "==")
                        , root_1);

                        // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:53:47: ^( FIELD ID )
                        {
                        ExprTree root_2 = (ExprTree)adaptor.nil();
                        root_2 = (ExprTree)adaptor.becomeRoot(
                        (ExprTree)adaptor.create(FIELD, "FIELD")
                        , root_2);

                        adaptor.addChild(root_2, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, root_2);
                        }

                        adaptor.addChild(root_1, stream_expression.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:54:5: expression
                    {
                    root_0 = (ExprTree)adaptor.nil();


                    pushFollow(FOLLOW_expression_in_test_expression177);
                    expression6=expression();

                    state._fsp--;

                    adaptor.addChild(root_0, expression6.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "test_expression"


    public static class expression_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expression"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:58:1: expression : or_expr EOF !;
    public final ExprParser.expression_return expression() throws RecognitionException {
        ExprParser.expression_return retval = new ExprParser.expression_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token EOF8=null;
        ExprParser.or_expr_return or_expr7 =null;


        ExprTree EOF8_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:59:3: ( or_expr EOF !)
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:59:5: or_expr EOF !
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_or_expr_in_expression192);
            or_expr7=or_expr();

            state._fsp--;

            adaptor.addChild(root_0, or_expr7.getTree());

            EOF8=(Token)match(input,EOF,FOLLOW_EOF_in_expression194); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expression"


    public static class or_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "or_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:62:1: or_expr : and_expr ( BAR ^ and_expr )* ;
    public final ExprParser.or_expr_return or_expr() throws RecognitionException {
        ExprParser.or_expr_return retval = new ExprParser.or_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token BAR10=null;
        ExprParser.and_expr_return and_expr9 =null;

        ExprParser.and_expr_return and_expr11 =null;


        ExprTree BAR10_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:63:3: ( and_expr ( BAR ^ and_expr )* )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:63:5: and_expr ( BAR ^ and_expr )*
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_and_expr_in_or_expr208);
            and_expr9=and_expr();

            state._fsp--;

            adaptor.addChild(root_0, and_expr9.getTree());

            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:63:14: ( BAR ^ and_expr )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==BAR) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:63:15: BAR ^ and_expr
            	    {
            	    BAR10=(Token)match(input,BAR,FOLLOW_BAR_in_or_expr211); 
            	    BAR10_tree = 
            	    (ExprTree)adaptor.create(BAR10)
            	    ;
            	    root_0 = (ExprTree)adaptor.becomeRoot(BAR10_tree, root_0);


            	    pushFollow(FOLLOW_and_expr_in_or_expr214);
            	    and_expr11=and_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, and_expr11.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "or_expr"


    public static class and_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "and_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:66:1: and_expr : not_expr ( AMP ^ not_expr )* ;
    public final ExprParser.and_expr_return and_expr() throws RecognitionException {
        ExprParser.and_expr_return retval = new ExprParser.and_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token AMP13=null;
        ExprParser.not_expr_return not_expr12 =null;

        ExprParser.not_expr_return not_expr14 =null;


        ExprTree AMP13_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:67:3: ( not_expr ( AMP ^ not_expr )* )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:67:5: not_expr ( AMP ^ not_expr )*
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_not_expr_in_and_expr229);
            not_expr12=not_expr();

            state._fsp--;

            adaptor.addChild(root_0, not_expr12.getTree());

            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:67:14: ( AMP ^ not_expr )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==AMP) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:67:15: AMP ^ not_expr
            	    {
            	    AMP13=(Token)match(input,AMP,FOLLOW_AMP_in_and_expr232); 
            	    AMP13_tree = 
            	    (ExprTree)adaptor.create(AMP13)
            	    ;
            	    root_0 = (ExprTree)adaptor.becomeRoot(AMP13_tree, root_0);


            	    pushFollow(FOLLOW_not_expr_in_and_expr235);
            	    not_expr14=not_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, not_expr14.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "and_expr"


    public static class not_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "not_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:70:1: not_expr : ( NOT ^ not_expr | equal_expr );
    public final ExprParser.not_expr_return not_expr() throws RecognitionException {
        ExprParser.not_expr_return retval = new ExprParser.not_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token NOT15=null;
        ExprParser.not_expr_return not_expr16 =null;

        ExprParser.equal_expr_return equal_expr17 =null;


        ExprTree NOT15_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:71:3: ( NOT ^ not_expr | equal_expr )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==NOT) ) {
                alt4=1;
            }
            else if ( (LA4_0==FALSE||LA4_0==ID||LA4_0==LPAR||(LA4_0 >= MINUS && LA4_0 <= NAT_LIT)||LA4_0==REAL_LIT||(LA4_0 >= STRING_LIT && LA4_0 <= TRUE)) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:71:5: NOT ^ not_expr
                    {
                    root_0 = (ExprTree)adaptor.nil();


                    NOT15=(Token)match(input,NOT,FOLLOW_NOT_in_not_expr250); 
                    NOT15_tree = 
                    (ExprTree)adaptor.create(NOT15)
                    ;
                    root_0 = (ExprTree)adaptor.becomeRoot(NOT15_tree, root_0);


                    pushFollow(FOLLOW_not_expr_in_not_expr253);
                    not_expr16=not_expr();

                    state._fsp--;

                    adaptor.addChild(root_0, not_expr16.getTree());

                    }
                    break;
                case 2 :
                    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:72:5: equal_expr
                    {
                    root_0 = (ExprTree)adaptor.nil();


                    pushFollow(FOLLOW_equal_expr_in_not_expr259);
                    equal_expr17=equal_expr();

                    state._fsp--;

                    adaptor.addChild(root_0, equal_expr17.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "not_expr"


    public static class equal_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "equal_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:74:1: equal_expr : compare_expr ( ( EQ | NEQ ) ^ compare_expr )* ;
    public final ExprParser.equal_expr_return equal_expr() throws RecognitionException {
        ExprParser.equal_expr_return retval = new ExprParser.equal_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token set19=null;
        ExprParser.compare_expr_return compare_expr18 =null;

        ExprParser.compare_expr_return compare_expr20 =null;


        ExprTree set19_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:75:3: ( compare_expr ( ( EQ | NEQ ) ^ compare_expr )* )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:75:5: compare_expr ( ( EQ | NEQ ) ^ compare_expr )*
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_compare_expr_in_equal_expr269);
            compare_expr18=compare_expr();

            state._fsp--;

            adaptor.addChild(root_0, compare_expr18.getTree());

            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:75:18: ( ( EQ | NEQ ) ^ compare_expr )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==EQ||LA5_0==NEQ) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:75:19: ( EQ | NEQ ) ^ compare_expr
            	    {
            	    set19=(Token)input.LT(1);

            	    set19=(Token)input.LT(1);

            	    if ( input.LA(1)==EQ||input.LA(1)==NEQ ) {
            	        input.consume();
            	        root_0 = (ExprTree)adaptor.becomeRoot(
            	        (ExprTree)adaptor.create(set19)
            	        , root_0);
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_compare_expr_in_equal_expr281);
            	    compare_expr20=compare_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, compare_expr20.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "equal_expr"


    public static class compare_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "compare_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:77:1: compare_expr : assign_expr ( ( LT | LE | GT | GE ) ^ assign_expr )* ;
    public final ExprParser.compare_expr_return compare_expr() throws RecognitionException {
        ExprParser.compare_expr_return retval = new ExprParser.compare_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token set22=null;
        ExprParser.assign_expr_return assign_expr21 =null;

        ExprParser.assign_expr_return assign_expr23 =null;


        ExprTree set22_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:78:3: ( assign_expr ( ( LT | LE | GT | GE ) ^ assign_expr )* )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:78:5: assign_expr ( ( LT | LE | GT | GE ) ^ assign_expr )*
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_assign_expr_in_compare_expr293);
            assign_expr21=assign_expr();

            state._fsp--;

            adaptor.addChild(root_0, assign_expr21.getTree());

            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:78:17: ( ( LT | LE | GT | GE ) ^ assign_expr )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0 >= GE && LA6_0 <= GT)||LA6_0==LE||LA6_0==LT) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:78:18: ( LT | LE | GT | GE ) ^ assign_expr
            	    {
            	    set22=(Token)input.LT(1);

            	    set22=(Token)input.LT(1);

            	    if ( (input.LA(1) >= GE && input.LA(1) <= GT)||input.LA(1)==LE||input.LA(1)==LT ) {
            	        input.consume();
            	        root_0 = (ExprTree)adaptor.becomeRoot(
            	        (ExprTree)adaptor.create(set22)
            	        , root_0);
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_assign_expr_in_compare_expr313);
            	    assign_expr23=assign_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, assign_expr23.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "compare_expr"


    public static class assign_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "assign_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:81:1: assign_expr : add_expr ;
